--- a/source/index.html
+++ b/source/index.html
@@ -1,14 +1,25 @@
 <!DOCTYPE html>
 <html class="page" lang="ru">
-  <head>
+<head>
     <meta charset="UTF-8">
-    <title>Название проекта</title>
+    <title>Drink2Go</title>
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <link rel="stylesheet" href="css/style.css">
-  </head>
+</head>
+
   <body class="page__body">
-    <header class="header">Шапка</header>
+    <header class="header">
+      <a class="header__logo logo" href="">
+        <picture>
+          <source media="(min-width: 1440px)" srcset="img/logo-desktop.svg" width="202" height="59">
+          <source media="(min-width: 768px)" srcset="img/logo-tablet.svg" width="174" height="52">
+        <img class="header__logo-image" src="img/logo-image-mobile.svg" width="34" height="38"
+          alt="Drink2Go.">
+      </picture>
+      </a>
+    </header>
 
     <script src="js/script.js" defer></script>
   </body>
+
 </html>
