--- a/source/index.html
+++ b/source/index.html
@@ -181,10 +181,88 @@
           </div>
         </form>
         <select class="select-control" aria-label="Сортировка">
+          <option value="default">По умолчанию</option>
           <option value="cheap">Сначала дешевые</option>
           <option value="expensive">Сначала дорогие</option>
           <option value="popular">Сначала популярные</option>
         </select>
+        <div class="catalog__list-wrapper">
+          <ul class="catalog__list">
+            <li class="catalog__item card">
+              <div class="card__wrapper">
+              <a class="card__picture" href="">
+                <img class="card__image" src="images/catalog-img/catalog-1-mobile.png" width="130" height="188" alt="Банка с холодным кофе">
+              </a>
+              <a class="card__title">Декаф Флэт Уайт</a>
+              <p class="card__description">Кофе без кофеина из Эфиопии
+                с натуральным фермерским молоком</p>
+              <p class="card__price">225₽</p>
+              <button class="button card__order">В корзину</button>
+            </div>
+            </li>
+            <li class="catalog__item card">
+              <div class="card__wrapper">
+              <a class="card__picture" href="">
+                <img class="card__image">
+              </a>
+              <a class="card__title">Декаф Флэт Уайт</a>
+              <p class="card__description">Кофе без кофеина из Эфиопии
+                с натуральным фермерским молоком</p>
+              <p class="card__price">225₽</p>
+              <button class="button card__order">В корзину</button>
+            </div>
+            </li>
+            <li class="catalog__item card">
+              <div class="card__wrapper">
+              <a class="card__picture" href="">
+                <img class="card__image">
+              </a>
+              <a class="card__title">Декаф Флэт Уайт</a>
+              <p class="card__description">Кофе без кофеина из Эфиопии
+                с натуральным фермерским молоком</p>
+              <p class="card__price">225₽</p>
+              <button class="button card__order">В корзину</button>
+            </div>
+            </li>
+            <li class="catalog__item card">
+              <div class="card__wrapper">
+              <a class="card__picture" href="">
+                <img class="card__image">
+              </a>
+              <a class="card__title">Декаф Флэт Уайт</a>
+              <p class="card__description">Кофе без кофеина из Эфиопии
+                с натуральным фермерским молоком</p>
+              <p class="card__price">225₽</p>
+              <button class="button card__order">В корзину</button>
+            </div>
+            </li>
+            <li class="catalog__item card">
+              <div class="card__wrapper">
+              <a class="card__picture" href="">
+                <img class="card__image">
+              </a>
+              <a class="card__title">Декаф Флэт Уайт</a>
+              <p class="card__description">Кофе без кофеина из Эфиопии
+                с натуральным фермерским молоком</p>
+              <p class="card__price">225₽</p>
+              <button class="button card__order">В корзину</button>
+            </div>
+            </li>
+            <li class="catalog__item card">
+              <div class="card__wrapper">
+              <a class="card__picture" href="">
+                <img class="card__image">
+              </a>
+              <a class="card__title">Декаф Флэт Уайт</a>
+              <p class="card__description">Кофе без кофеина из Эфиопии
+                с натуральным фермерским молоком</p>
+              <p class="card__price">225₽</p>
+              <button class="button card__order">В корзину</button>
+            </div>
+            </li>
+
+          </ul>
+        </div>
 
       </section>
     </main>
