--- a/source/index.html
+++ b/source/index.html
@@ -203,7 +203,7 @@
             <li class="catalog__item card">
               <div class="card__wrapper">
               <a class="card__picture" href="">
-                <img class="card__image">
+                <img class="card__image" src="images/catalog-img/catalog-2-mobile.png" width="130" height="188" alt="Банка с холодным кофе">
               </a>
               <a class="card__title">Декаф Флэт Уайт</a>
               <p class="card__description">Кофе без кофеина из Эфиопии
@@ -215,7 +215,7 @@
             <li class="catalog__item card">
               <div class="card__wrapper">
               <a class="card__picture" href="">
-                <img class="card__image">
+                <img class="card__image" src="images/catalog-img/catalog-3-mobile.png" width="130" height="188" alt="Банка с холодным кофе">
               </a>
               <a class="card__title">Декаф Флэт Уайт</a>
               <p class="card__description">Кофе без кофеина из Эфиопии
@@ -227,7 +227,7 @@
             <li class="catalog__item card">
               <div class="card__wrapper">
               <a class="card__picture" href="">
-                <img class="card__image">
+                <img class="card__image" src="images/catalog-img/catalog-4-mobile.png" width="130" height="188" alt="Банка с холодным кофе">
               </a>
               <a class="card__title">Декаф Флэт Уайт</a>
               <p class="card__description">Кофе без кофеина из Эфиопии
@@ -239,7 +239,7 @@
             <li class="catalog__item card">
               <div class="card__wrapper">
               <a class="card__picture" href="">
-                <img class="card__image">
+                <img class="card__image" src="images/catalog-img/catalog-5-mobile.png" width="130" height="188" alt="Банка с холодным кофе">
               </a>
               <a class="card__title">Декаф Флэт Уайт</a>
               <p class="card__description">Кофе без кофеина из Эфиопии
@@ -251,7 +251,7 @@
             <li class="catalog__item card">
               <div class="card__wrapper">
               <a class="card__picture" href="">
-                <img class="card__image">
+                <img class="card__image" src="images/catalog-img/catalog-6-mobile.png" width="130" height="188" alt="Банка с холодным кофе">
               </a>
               <a class="card__title">Декаф Флэт Уайт</a>
               <p class="card__description">Кофе без кофеина из Эфиопии
@@ -260,10 +260,23 @@
               <button class="button card__order">В корзину</button>
             </div>
             </li>
-
           </ul>
         </div>
-
+        <div class="catalog__pagination pagination">
+          <button class="pagination__button pagination__button--prev button">Назад</button>
+          <ul class="pagination__list">
+            <li class="pagination__item">
+              <a class="pagination__link">1</a>
+            </li>
+            <li class="pagination__item">
+              <a class="pagination__link pagination__link--current" href="#">2</a>
+            </li>
+            <li class="pagination__item">
+              <a class="pagination__link" href="#">3</a>
+            </li>
+          </ul>
+          <button class="pagination__button pagination__button--next button">Вперёд</button>
+        </div>
       </section>
     </main>
 
