Добавляет блок с картой

--- a/source/index.html
+++ b/source/index.html
@@ -278,7 +278,11 @@
           <button class="pagination__button pagination__button--next button">Вперёд</button>
         </div>
       </section>
+      <section class="map section">
+        <img class="map__image" src="images/map.jpg" alt="Карта с геопозицией">
+      </section>
     </main>
+
 
     <script src="js/script.js" defer></script>
   </body>
