--- a/source/index.html
+++ b/source/index.html
@@ -282,7 +282,82 @@
         <img class="map__image" src="images/map.jpg" alt="Карта с геопозицией">
       </section>
     </main>
+    <footer class="footer">
+      <div class="footer__social social">
+        <a class="social__logo logo">
+          <img class="logo__image" src="images/logo-footer-mobile.svg" alt="Кофе ту гоу.">
+        </a>
+        <ul class="social__list">
+          <li class="social__item">
+            <a class="social__link social__link--vk">
+              <span class="visually-hidden">ВКонтакте.</span>
+            </a>
+          </li>
+          <li class="social__item">
+            <a class="social__link social__link--pinterest">
+              <span class="visually-hidden">Пинтерест.</span>
+            </a>
+          </li>
+          <li class="social__item">
+            <a class="social__link social__link--ok">
+              <span class="visually-hidden">Одноклассники.</span>
+            </a>
+          </li>
+        </ul>
+      </div>
+      <section class="footer__navigation footer-nav">
+        <div class="footer-nav__wrapper">
+          <h5 class="footer-nav__title">Интернет-магазин</h5>
+            <ul class="footer-nav__list">
+              <li class="footer-nav__item">
+                <a class="footer-nav__link">Каталог</a>
+              </li>
+              <li class="footer-nav__item">
+                <a class="footer-nav__link">Доставка</a>
+              </li>
+              <li class="footer-nav__item">
+                <a class="footer-nav__link">Способ оплаты</a>
+              </li>
+              <li class="footer-nav__item">
+                <a class="footer-nav__link">О нас</a>
+              </li>
+            </ul>
+        </div>
+        <div class="footer-nav__wrapper">
+          <h5 class="footer-nav__title">Медиа</h5>
+            <ul class="footer-nav__list">
+              <li class="footer-nav__item">
+                <a class="footer-nav__link">Блог</a>
+              </li>
+              <li class="footer-nav__item">
+                <a class="footer-nav__link">Информация для СМИ</a>
+              </li>
+              <li class="footer-nav__item">
+                <a class="footer-nav__link">Правовая информация</a>
+              </li>
+            </ul>
+        </div>
+        <div class="footer-nav__wrapper">
+          <h5 class="footer-nav__title">Контакты</h5>
+            <ul class="footer-nav__list">
+              <li class="footer-nav__item">
+                <a class="footer-nav__link footer-nav__link--adress">Санкт-Петербург, набережная реки Карповки, дом 5</a>
+              </li>
+              <li class="footer-nav__item">
+                <a class="footer-nav__link footer-nav__link--tel" href="+7 (999) 999-99-99">+7 (999) 999-99-99</a>
+              </li>
+            </ul>
+        </div>
+        <div class="footer__copyright copyright">
+          <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive">
+            <p class="copyright__text">Разработано в HTML Academy</p>
+            <span class="copyright__icon"></span>
+          </a>
+        </div>
 
+      </section>
+
+    </footer>
 
     <script src="js/script.js" defer></script>
   </body>
