Стилизует карточку товара

--- a/source/index.html
+++ b/source/index.html
@@ -229,76 +229,77 @@
         <div class="catalog__list-wrapper">
           <ul class="catalog__list">
             <li class="catalog__item card">
-              <div class="card__wrapper">
               <a class="card__picture" href="">
                 <img class="card__image" src="images/catalog-img/catalog-1-mobile.png" width="130" height="188" alt="Банка с холодным кофе">
               </a>
               <a class="card__title">Декаф Флэт Уайт</a>
               <p class="card__description">Кофе без кофеина из Эфиопии
                 с натуральным фермерским молоком</p>
-              <p class="card__price">225₽</p>
+                <div class="card__wrapper">
+              <span class="card__price">225₽</span>
               <button class="button card__order">В корзину</button>
             </div>
             </li>
             <li class="catalog__item card">
-              <div class="card__wrapper">
               <a class="card__picture" href="">
                 <img class="card__image" src="images/catalog-img/catalog-2-mobile.png" width="130" height="188" alt="Банка с холодным кофе">
               </a>
               <a class="card__title">Декаф Флэт Уайт</a>
               <p class="card__description">Кофе без кофеина из Эфиопии
                 с натуральным фермерским молоком</p>
-              <p class="card__price">225₽</p>
+                <div class="card__wrapper">
+              <span class="card__price">225₽</span>
               <button class="button card__order">В корзину</button>
-            </div>
+                  </div>
             </li>
             <li class="catalog__item card">
-              <div class="card__wrapper">
               <a class="card__picture" href="">
                 <img class="card__image" src="images/catalog-img/catalog-3-mobile.png" width="130" height="188" alt="Банка с холодным кофе">
               </a>
               <a class="card__title">Декаф Флэт Уайт</a>
               <p class="card__description">Кофе без кофеина из Эфиопии
                 с натуральным фермерским молоком</p>
-              <p class="card__price">225₽</p>
+                <div class="card__wrapper">
+              <span class="card__price">225₽</span>
               <button class="button card__order">В корзину</button>
-            </div>
+                  </div>
             </li>
             <li class="catalog__item card">
-              <div class="card__wrapper">
               <a class="card__picture" href="">
                 <img class="card__image" src="images/catalog-img/catalog-4-mobile.png" width="130" height="188" alt="Банка с холодным кофе">
               </a>
               <a class="card__title">Декаф Флэт Уайт</a>
               <p class="card__description">Кофе без кофеина из Эфиопии
                 с натуральным фермерским молоком</p>
-              <p class="card__price">225₽</p>
+                <div class="card__wrapper">
+              <span class="card__price">225₽</span>
               <button class="button card__order">В корзину</button>
-            </div>
+                  </div>
             </li>
             <li class="catalog__item card">
-              <div class="card__wrapper">
+
               <a class="card__picture" href="">
                 <img class="card__image" src="images/catalog-img/catalog-5-mobile.png" width="130" height="188" alt="Банка с холодным кофе">
               </a>
               <a class="card__title">Декаф Флэт Уайт</a>
               <p class="card__description">Кофе без кофеина из Эфиопии
                 с натуральным фермерским молоком</p>
-              <p class="card__price">225₽</p>
+                <div class="card__wrapper">
+              <span class="card__price">225₽</span>
               <button class="button card__order">В корзину</button>
-            </div>
+              </div>
             </li>
             <li class="catalog__item card">
-              <div class="card__wrapper">
               <a class="card__picture" href="">
                 <img class="card__image" src="images/catalog-img/catalog-6-mobile.png" width="130" height="188" alt="Банка с холодным кофе">
               </a>
               <a class="card__title">Декаф Флэт Уайт</a>
               <p class="card__description">Кофе без кофеина из Эфиопии
                 с натуральным фермерским молоком</p>
-              <p class="card__price">225₽</p>
+                <div class="card__wrapper">
+              <span class="card__price">225₽</span>
               <button class="button card__order">В корзину</button>
-            </div>
+              </div>
             </li>
           </ul>
         </div>
