Стилизует ещё пагинацию

--- a/source/index.html
+++ b/source/index.html
@@ -304,7 +304,9 @@
           </ul>
         </div>
         <div class="catalog__pagination pagination">
-          <button class="pagination__button pagination__button--prev button">Назад</button>
+          <button class="pagination__button pagination__button--prev button">
+            <span class="visually-hidden">Назад</span>
+          </button>
           <ul class="pagination__list">
             <li class="pagination__item">
               <a class="pagination__link">1</a>
@@ -316,7 +318,9 @@
               <a class="pagination__link" href="#">3</a>
             </li>
           </ul>
-          <button class="pagination__button pagination__button--next button">Вперёд</button>
+          <button class="pagination__button pagination__button--next button">
+            <span class="visually-hidden">Вперёд</span>
+          </button>
         </div>
         </div>
       </section>
