--- a/source/index.html
+++ b/source/index.html
@@ -18,7 +18,7 @@
           alt="Drink2Go.">
       </picture>
       </a>
-      <nav class="main-nav">
+      <nav class="main-nav main-nav--opened">
         <ul class="main-nav__list site-list">
           <li class="site-list__item">
             <a class="site-list__link site-list__link--current site-list__link--index">Главная</a>
@@ -33,9 +33,8 @@
             <a class="site-list__link">О нас</a>
           </li>
         </ul>
-        <div class="main-nav__wrapper">
-          <ul class="main-nav__list user-list">
-            <li class="user-list__item">
+          <ul class="main-nav__user-list">
+            <li class="main-nav__item">
               <a class="main-nav__link">
                 <svg width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
                   <path id="user" fill-rule="evenodd" clip-rule="evenodd" d="M10.6667 4C10.6667 5.47276 9.47276 6.66667 8 6.66667C6.52724 6.66667 5.33333 5.47276 5.33333 4C5.33333 2.52724 6.52724 1.33333 8 1.33333C9.47276 1.33333 10.6667 2.52724 10.6667 4ZM12 4C12 6.20914 10.2091 8 8 8C5.79086 8 4 6.20914 4 4C4 1.79086 5.79086 0 8 0C10.2091 0 12 1.79086 12 4ZM3.19673 12.3102C4.43611 11.2774 6.1613 10.6667 8 10.6667C9.8387 10.6667 11.5639 11.2774 12.8033 12.3102C14.0354 13.337 14.6667 14.6719 14.6667 16H16C16 14.2321 15.1573 12.5363 13.6569 11.286C12.1566 10.0357 10.1218 9.33333 8 9.33333C5.87821 9.33333 3.8434 10.0357 2.34315 11.286C0.842686 12.5363 0 14.2321 0 16L1.33333 16C1.33333 14.6719 1.96465 13.337 3.19673 12.3102Z" fill="#333333"/>
@@ -43,7 +42,7 @@
                 <span class="visually-hidden">Личный кабинет</span>
               </a>
             </li>
-            <li class="user-list__item">
+            <li class="main-nav__item">
           <a class="main-nav__link">
             <svg width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
               <path id="Union" fill-rule="evenodd" clip-rule="evenodd" d="M5.66091 3.87546L5.89351 6.66667H10.1065L10.3391 3.87546C10.4531 2.50699 9.37321 1.33333 8 1.33333C6.62679 1.33333 5.54687 2.50699 5.66091 3.87546ZM11.4444 6.66667L11.6678 3.98618C11.8466 1.84036 10.1533 0 8 0C5.84674 0 4.15336 1.84036 4.33218 3.98618L4.55556 6.66667H1.34687H0L0.190476 8L1.00626 13.7105C1.19393 15.0242 2.31905 16 3.64612 16H12.3539C13.6809 16 14.8061 15.0242 14.9937 13.7105L15.8095 8L16 6.66667H14.6531H11.4444ZM11.3333 8H11.2801L11.0579 10.6667H14.0817L14.4627 8H11.3333ZM9.94213 8H6.05787L6.28009 10.6667H9.71991L9.94213 8ZM4.71991 8H4.66667H1.53735L1.9183 10.6667H4.94213L4.71991 8ZM6.61342 14.6667L6.3912 12H9.6088L9.38658 14.6667H6.61342ZM10.9468 12L10.7245 14.6667H12.3539C13.0174 14.6667 13.58 14.1788 13.6738 13.5219L13.8912 12H10.9468ZM5.05324 12L5.27547 14.6667H3.64612C2.98259 14.6667 2.42003 14.1788 2.32619 13.5219L2.10877 12H5.05324Z" fill="#333333"/>
@@ -57,8 +56,7 @@
               <path id="Menu" fill-rule="evenodd" clip-rule="evenodd" d="M0 0H16V1.5H0V0ZM0 5.25H16V6.75H0V5.25ZM16 10.5H0V12H16V10.5Z" fill="#333333"/>
               </svg>
             <span class="visually-hidden">Открыть меню</span>
-          </button>
-        </div>
+            </button>
       </nav>
     </div>
     </header>
@@ -324,11 +322,14 @@
         </div>
         </div>
       </section>
-      <section class="map section">
+      <section class="map">
+        <div class="map__wrapper">
         <img class="map__image" src="images/map.jpg" alt="Карта с геопозицией">
+      </div>
       </section>
     </main>
     <footer class="footer">
+      <div class="footer__wrapper">
       <div class="footer__social social">
         <a class="social__logo logo">
           <img class="logo__image" src="images/logo-footer-mobile.svg" alt="Кофе ту гоу.">
@@ -336,16 +337,31 @@
         <ul class="social__list">
           <li class="social__item">
             <a class="social__link social__link--vk">
+              <svg width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <g id="Icons&#38;Logo/VK">
+                <path id="vk" fill-rule="evenodd" clip-rule="evenodd" d="M1.40589 1.40589C0 2.81177 0 5.0745 0 9.6V10.4C0 14.9255 0 17.1882 1.40589 18.5941C2.81177 20 5.0745 20 9.6 20H10.4C14.9255 20 17.1882 20 18.5941 18.5941C20 17.1882 20 14.9255 20 10.4V9.6C20 5.0745 20 2.81177 18.5941 1.40589C17.1882 0 14.9255 0 10.4 0H9.6C5.0745 0 2.81177 0 1.40589 1.40589ZM3.37505 6.08337C3.48338 11.2834 6.08337 14.4084 10.6417 14.4084H10.9001V11.4334C12.5751 11.6 13.8417 12.825 14.35 14.4084H16.7167C16.0667 12.0417 14.3583 10.7334 13.2916 10.2334C14.3583 9.61671 15.8583 8.11671 16.2166 6.08337H14.0666C13.5999 7.73337 12.2168 9.23337 10.9001 9.37504V6.08337H8.75V11.85C7.41667 11.5167 5.73338 9.90004 5.65837 6.08337H3.37505Z" fill="#BDBDBD"/>
+                </g>
+                </svg>
               <span class="visually-hidden">ВКонтакте.</span>
             </a>
           </li>
           <li class="social__item">
             <a class="social__link social__link--pinterest">
+              <svg width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <g id="Icons&#38;Logo/VK">
+                <path id="vk" fill-rule="evenodd" clip-rule="evenodd" d="M1.40589 1.40589C0 2.81177 0 5.0745 0 9.6V10.4C0 14.9255 0 17.1882 1.40589 18.5941C2.81177 20 5.0745 20 9.6 20H10.4C14.9255 20 17.1882 20 18.5941 18.5941C20 17.1882 20 14.9255 20 10.4V9.6C20 5.0745 20 2.81177 18.5941 1.40589C17.1882 0 14.9255 0 10.4 0H9.6C5.0745 0 2.81177 0 1.40589 1.40589ZM3.37505 6.08337C3.48338 11.2834 6.08337 14.4084 10.6417 14.4084H10.9001V11.4334C12.5751 11.6 13.8417 12.825 14.35 14.4084H16.7167C16.0667 12.0417 14.3583 10.7334 13.2916 10.2334C14.3583 9.61671 15.8583 8.11671 16.2166 6.08337H14.0666C13.5999 7.73337 12.2168 9.23337 10.9001 9.37504V6.08337H8.75V11.85C7.41667 11.5167 5.73338 9.90004 5.65837 6.08337H3.37505Z" fill="#BDBDBD"/>
+                </g>
+                </svg>
               <span class="visually-hidden">Пинтерест.</span>
             </a>
           </li>
           <li class="social__item">
             <a class="social__link social__link--ok">
+              <svg width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <g id="Icons&#38;Logo/VK">
+                <path id="vk" fill-rule="evenodd" clip-rule="evenodd" d="M1.40589 1.40589C0 2.81177 0 5.0745 0 9.6V10.4C0 14.9255 0 17.1882 1.40589 18.5941C2.81177 20 5.0745 20 9.6 20H10.4C14.9255 20 17.1882 20 18.5941 18.5941C20 17.1882 20 14.9255 20 10.4V9.6C20 5.0745 20 2.81177 18.5941 1.40589C17.1882 0 14.9255 0 10.4 0H9.6C5.0745 0 2.81177 0 1.40589 1.40589ZM3.37505 6.08337C3.48338 11.2834 6.08337 14.4084 10.6417 14.4084H10.9001V11.4334C12.5751 11.6 13.8417 12.825 14.35 14.4084H16.7167C16.0667 12.0417 14.3583 10.7334 13.2916 10.2334C14.3583 9.61671 15.8583 8.11671 16.2166 6.08337H14.0666C13.5999 7.73337 12.2168 9.23337 10.9001 9.37504V6.08337H8.75V11.85C7.41667 11.5167 5.73338 9.90004 5.65837 6.08337H3.37505Z" fill="#BDBDBD"/>
+                </g>
+                </svg>
               <span class="visually-hidden">Одноклассники.</span>
             </a>
           </li>
@@ -387,22 +403,29 @@
           <h5 class="footer-nav__title">Контакты</h5>
             <ul class="footer-nav__list">
               <li class="footer-nav__item">
-                <a class="footer-nav__link footer-nav__link--adress">Санкт-Петербург, набережная реки Карповки, дом 5</a>
+                <a class="footer-nav__contacts footer-nav__link--adress">Санкт-Петербург, набережная реки Карповки, дом 5</a>
               </li>
               <li class="footer-nav__item">
-                <a class="footer-nav__link footer-nav__link--tel" href="+7 (999) 999-99-99">+7 (999) 999-99-99</a>
+                <a class="footer-nav__contacts footer-nav__link--tel" href="+7 (999) 999-99-99">+7 (999) 999-99-99</a>
               </li>
             </ul>
         </div>
         <div class="footer__copyright copyright">
           <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive">
-            <p class="copyright__text">Разработано в HTML Academy</p>
-            <span class="copyright__icon"></span>
+            <p class="copyright__text">Разработано в</p>
+            <p class="copyright__text">HTML Academy</p>
+            <span class="copyright__icon">
+              <svg width="12" height="16" viewBox="0 0 12 16" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <g id="Icons&#38;Logo/HTML Academy Logo">
+                <path id="&#208;&#187;&#208;&#190;&#208;&#179;&#208;&#190;" d="M11.2151 5.75392L5.97184 2.49957V2.49875L5.97121 2.49916L5.97058 2.49875V2.49957L0.784854 5.75013V1.40658L6.00008 0.830884L11.2151 1.40658V5.75392ZM11.211 6.32987L9.12557 7.62344L5.98451 5.65607L5.97935 6.22863L8.66414 7.9096L8.20107 8.19683L5.98451 6.80853L5.97935 7.3811L7.72892 8.47648L7.31607 8.76717L7.30606 8.77351L5.98451 7.95383L5.97935 8.52631L6.8465 9.06404L5.96315 9.62244L0.796198 6.3886L5.97058 3.1139V3.11448L11.211 6.32987ZM11.2151 11.7713L6 15.0384L0.784854 11.7713V7.02542L5.97763 10.2796L5.98631 10.8693L2.42396 8.63702L2.41871 9.20959L5.99523 11.4728L6.00407 12.0782L2.42873 9.83883L2.42356 10.4113L6 12.6745L9.60624 10.4026V7.95712L11.2151 6.94552V11.7713ZM5.99984 -3.17891e-07L0 0.662267V12.2411L6 16L12 12.2411V0.662267L5.99984 -3.17891e-07Z" fill="#BDBDBD"/>
+                </g>
+                </svg>
+            </span>
           </a>
         </div>
 
       </section>
-
+    </div>
     </footer>
 
     <script src="js/script.js" defer></script>
